# MultiCameraPeopleTrackingSystem1-0-UDP

./: .gitignore  data.csv  pca_fpga.xml
Results/client/: CMakeLists.txt  configurtion.xml  pca.xml
build-server_gui-Desktop_Qt_5_10_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_predefs.h  qrc_resource.cpp  settings.ini  ui_mainwindow.h
build-server_gui-Desktop_Qt_5_10_0_GCC_64bit-Release/: Makefile  moc_mainwindow.cpp  moc_predefs.h  moc_qcustomplot.cpp  qrc_resource.cpp  server_gui  ui_mainwindow.h
calib/caliberation_test/: CMakeCache.txt  Makefile  calib_C1.xml  calib_R.xml  calibrate  cmake_install.cmake  (+1 more)
calib/calibration/: CMakeLists.txt  calib_C0.xml  calib_L.xml  calib_R.xml  homography.xml  test2.xml
calib/calibration/src/: main.cpp
calibration/: .gitignore  homography.xml
client/: configurtion-L.xml  configurtion-R.xml  configurtion-c0.xml  configurtion-c1.xml  configurtion.xml  pca (copy).xml  pca-28-12-2017-2-13-PM.xml  pca-L.xml  pca-R.xml  pca.xml  pca.xmll  pca_coeff-L.xml  pca_coeff-c0.xml  pca_coeff-c1.xml  pca_coeff.xml  pca_fpga.xml
server/: .~lock.packet.csv#  CMakeLists.txt  data.csv  packet.csv  server.cbp
server_gui/: .gitignore  CameraConfig.cpp  DataAssociation.cpp  DataAssociation.h  FrameQueue.cpp  FrameQueue.h  Graph.cpp  Graph.h  ServerUDP.h  graph.cpp  graph.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h  resource.qrc  server_gui.pro  server_gui.pro.user.0db01a4  server_gui.pro.user.be8f460  server_gui.pro.user.c7c8889  serverthread.cpp  serverthread.h  udp_client.cpp  udp_client.h
(+28 files in other folders)
